[tool.poetry]
name = "mongodb-tut"
version = "0.1.0"
description = "mongodb tutorial"
authors = ["fouad-alef <fouad.shammary@alefeducation.com>"]
readme = "README.md"
packages = [{include = "mongodb_tut"}]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.3.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
